# rustrate

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: main.rs  routes.rs  state.rs  tui.rs
