[package]
name = "rustrate"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.28", features = ["rt-multi-thread", "macros", "signal"] }
axum = "0.6"
crossterm = "0.26"
ratatui = "0.20"
chrono = "0.4"
clap = { version = "4.1", features = ["derive"] }
rand = "0.9.0"
serde_json = "1.0.139"
